src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__int32__cast_int32_to_float32.snap
---
source: src/expr/src/scalar/func/impls/int32.rs
expression: "#[sqlfunc(\n    sqlname = \"integer_to_real\",\n    preserves_uniqueness = false,\n    inverse = to_unary!(super::CastFloat32ToInt32),\n    is_monotone = true\n)]\nfn cast_int32_to_float32(a: i32) -> f32 {\n    #[allow(clippy::as_conversions)] { a as f32 }\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct CastInt32ToFloat32;
impl crate::func::EagerUnaryFunc for CastInt32ToFloat32 {
    type Input<'a> = i32;
    type Output<'a> = f32;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_int32_to_float32(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastFloat32ToInt32)
    }
    fn is_monotone(&self) -> bool {
        true
    }
    fn preserves_uniqueness(&self) -> bool {
        false
    }
}
impl std::fmt::Display for CastInt32ToFloat32 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("integer_to_real")
    }
}
fn cast_int32_to_float32(a: i32) -> f32 {
    #[allow(clippy::as_conversions)] { a as f32 }
}
