src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__int32__cast_int32_to_pg_legacy_char.snap
---
source: src/expr/src/scalar/func/impls/int32.rs
expression: "#[sqlfunc(\n    sqlname = \"integer_to_\\\"char\\\"\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(super::CastPgLegacyCharToInt32)\n)]\nfn cast_int32_to_pg_legacy_char(a: i32) -> Result<PgLegacyChar, EvalError> {\n    let a = i8::try_from(a).map_err(|_| EvalError::CharOutOfRange)?;\n    Ok(PgLegacyChar(u8::reinterpret_cast(a)))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct CastInt32ToPgLegacyChar;
impl crate::func::EagerUnaryFunc for CastInt32ToPgLegacyChar {
    type Input<'a> = i32;
    type Output<'a> = Result<PgLegacyChar, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_int32_to_pg_legacy_char(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastPgLegacyCharToInt32)
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastInt32ToPgLegacyChar {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("integer_to_\"char\"")
    }
}
fn cast_int32_to_pg_legacy_char(a: i32) -> Result<PgLegacyChar, EvalError> {
    let a = i8::try_from(a).map_err(|_| EvalError::CharOutOfRange)?;
    Ok(PgLegacyChar(u8::reinterpret_cast(a)))
}
