src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__int32__neg_int32.snap
---
source: src/expr/src/scalar/func/impls/int32.rs
expression: "#[sqlfunc(\n    sqlname = \"-\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(NegInt32),\n    is_monotone = true\n)]\nfn neg_int32(a: i32) -> Result<i32, EvalError> {\n    a.checked_neg().ok_or_else(|| EvalError::Int32OutOfRange(a.to_string().into()))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct NegInt32;
impl crate::func::EagerUnaryFunc for NegInt32 {
    type Input<'a> = i32;
    type Output<'a> = Result<i32, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        neg_int32(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(NegInt32)
    }
    fn is_monotone(&self) -> bool {
        true
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for NegInt32 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("-")
    }
}
fn neg_int32(a: i32) -> Result<i32, EvalError> {
    a.checked_neg().ok_or_else(|| EvalError::Int32OutOfRange(a.to_string().into()))
}
